# my_rocperf_tool

./: .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt
include/my_rocperf_tool/: att_output_dir.h  check_rocprofiler_status.h  disassembler.h  init_llvm.h  inst_statistics.h  loop_detection.h  rocperf_tool.h
include/my_rocperf_tool/data/: comgr-isa-metadata.def
lib/: CMakeLists.txt  att_output_dir.cpp  check_rocprofiler_status.cpp  disassembler.cpp  init_llvm.cpp  loop_detection.cpp  rocperf_tool.cpp
tools/: CMakeLists.txt  load_issue_stall.cpp
